v0.10/_sources/examples/formats/NEXRAD_Level_3_File.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_examples_formats_NEXRAD_Level_3_File.py>` to download the full example code
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_formats_NEXRAD_Level_3_File.py:


NEXRAD Level 3 File
===================

Use MetPy to read information from a NEXRAD Level 3 (NIDS product) file and plot


.. code-block:: default

    import matplotlib.pyplot as plt
    import numpy as np

    from metpy.cbook import get_test_data
    from metpy.io import Level3File
    from metpy.plots import add_metpy_logo, add_timestamp, colortables








.. code-block:: default

    fig, axes = plt.subplots(1, 2, figsize=(15, 8))
    add_metpy_logo(fig, 190, 85, size='large')
    for v, ctable, ax in zip(('N0Q', 'N0U'), ('NWSReflectivity', 'NWSVelocity'), axes):
        # Open the file
        name = get_test_data('nids/KOUN_SDUS54_{}TLX_201305202016'.format(v), as_file_obj=False)
        f = Level3File(name)

        # Pull the data out of the file object
        datadict = f.sym_block[0][0]

        # Turn into an array, then mask
        data = np.ma.array(datadict['data'])
        data[data == 0] = np.ma.masked

        # Grab azimuths and calculate a range based on number of gates
        az = np.array(datadict['start_az'] + [datadict['end_az'][-1]])
        rng = np.linspace(0, f.max_range, data.shape[-1] + 1)

        # Convert az,range to x,y
        xlocs = rng * np.sin(np.deg2rad(az[:, np.newaxis]))
        ylocs = rng * np.cos(np.deg2rad(az[:, np.newaxis]))

        # Plot the data
        norm, cmap = colortables.get_with_steps(ctable, 16, 16)
        ax.pcolormesh(xlocs, ylocs, data, norm=norm, cmap=cmap)
        ax.set_aspect('equal', 'datalim')
        ax.set_xlim(-40, 20)
        ax.set_ylim(-30, 30)
        add_timestamp(ax, f.metadata['prod_time'], y=0.02, high_contrast=True)

    plt.show()



.. image:: /examples/formats/images/sphx_glr_NEXRAD_Level_3_File_001.png
    :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    /home/travis/virtualenv/python3.6.7/lib/python3.6/site-packages/pooch/core.py:352: UserWarning: Downloading data file 'nids/KOUN_SDUS54_N0QTLX_201305202016' from remote data store 'https://github.com/Unidata/MetPy/raw/v0.10.2/staticdata/nids/KOUN_SDUS54_N0QTLX_201305202016' to '/home/travis/build/Unidata/MetPy/staticdata/v0.10.2'.
      action_word[action], fname, self.get_url(fname), str(self.path)
    /home/travis/virtualenv/python3.6.7/lib/python3.6/site-packages/pooch/core.py:352: UserWarning: Downloading data file 'nids/KOUN_SDUS54_N0UTLX_201305202016' from remote data store 'https://github.com/Unidata/MetPy/raw/v0.10.2/staticdata/nids/KOUN_SDUS54_N0UTLX_201305202016' to '/home/travis/build/Unidata/MetPy/staticdata/v0.10.2'.
      action_word[action], fname, self.get_url(fname), str(self.path)




.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  1.424 seconds)


.. _sphx_glr_download_examples_formats_NEXRAD_Level_3_File.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download

     :download:`Download Python source code: NEXRAD_Level_3_File.py <NEXRAD_Level_3_File.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: NEXRAD_Level_3_File.ipynb <NEXRAD_Level_3_File.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
